--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,1 +1,209 @@
-body{-webkit-font-smoothing:antialiased;color:#232323;font-family:Lato,sans-serif}nav li:last-child a{background:#e24c11}nav li:last-child a:hover{background:#9e441a}nav li a{transition:all .3s ease-in-out}nav li a:hover{color:#e24c11}.size,section.hero{background:#f8f8f8}.add-to-cart{border:2px solid #e24c11;color:#e24c11;transition:all .3s ease-in-out}.add-to-cart:hover{background:#e24c11;border-color:#fff;color:#fff}.add-bg-pizza-size{background:#f8f8f8}.grid{grid-gap:2.5% 2.5%;display:grid;grid-template-columns:1fr 1fr 1fr 1fr;grid-template-rows:320px 50px 150px 150px;margin-left:5%;margin-right:5%}.btn-primary{background-color:#e24c11;background:#e24c11;color:#e24c11}.btn-primary:hover{color:#9e441a;transition:all .3s ease-in-out}section.cart{background:#f8f8f8}section.cart .amount{color:#e24c11}section.cart .pizza_size{color:grey}section.login{background:#f8f8f8}section.login a{color:#e24c11}section.login a:hover{color:#9e441a;transition:all .3s ease-in-out}a.link{color:#e24c11}section.status{background:#f8f8f8;min-height:calc(100vh - 86px)}.status-box{padding:60px 0 0}.status-box ul{padding-left:60px 0 0}.status-box ul li span{padding-left:20px;position:relative}.status-box ul li span:after{background:#232323;border-radius:50%;box-shadow:0 0 1px 10px #f8f8f8;content:"";height:10px;left:-10px;position:absolute;top:50%;transform:translate(-50%);width:10px}.status-box ul li span:before{color:inherit;font-family:Line Awesome Free;font-size:46px;font-weight:600;left:-90px;position:absolute;top:50%;transform:translateY(-40%)}.status-box ul li:first-child span:before{content:"\f46c"}.status-box ul li:nth-child(2) span:before{content:"\f560"}.status-box ul li:nth-child(3) span:before{content:"\f818"}.status-box ul li:nth-child(4) span:before{content:"\f0d1"}.status-box ul li:nth-child(5) span:before{content:"\f582"}.status-box ul li{position:relative}.status-box ul li:before{background:#232323;content:"";height:100%;left:-11px;margin-top:10px;position:absolute;top:0;width:2px}.status-box ul li:nth-child(5) span:after{box-shadow:0 20px 1px 20px #f8f8f8}.status-box ul li.step-completed span:after,.status-box ul li.step-completed:before{background:#ccc}.status-box ul li.step-completed span{color:#ccc}.status-box ul li.current span{color:#e24c11}.status-box ul li.current span:after{background:#e24c11}.status-box ul li small{float:right;font-size:14px;margin-top:8px}@media (max-width:1060px){.container{max-width:90%}.table{display:block;overflow-x:auto;white-space:nowrap}}@media (max-width:768px){.status-box ul li span:before{font-size:34px}}
+body {
+  font-family: "Lato", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  color: #232323;
+}
+
+nav li:last-child a {
+  background: #e24c11;
+}
+nav li:last-child a:hover {
+  background: #9e441a;
+}
+
+nav li a {
+  transition: all 0.3s ease-in-out;
+}
+nav li a:hover {
+  color: #e24c11;
+}
+
+section.hero {
+  background: #F8F8F8;
+}
+
+.size {
+  background: #F8F8F8;
+}
+
+.add-to-cart {
+  border: 2px solid #e24c11;
+  color: #e24c11;
+  transition: all 0.3s ease-in-out;
+}
+.add-to-cart:hover {
+  background: #e24c11;
+  border-color: #fff;
+  color: #fff;
+}
+
+.add-bg-pizza-size {
+  background: #F8F8F8;
+}
+
+.grid {
+  margin-left: 5%;
+  margin-right: 5%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 320px 50px 150px 150px;
+  grid-gap: 2.5% 2.5%;
+}
+
+.btn-primary {
+  background-color: #e24c11;
+  background: #e24c11;
+  color: #e24c11;
+}
+.btn-primary:hover {
+  color: #9e441a;
+  transition: all 0.3s ease-in-out;
+}
+
+section.cart {
+  background: #F8F8F8;
+}
+section.cart .amount {
+  color: #e24c11;
+}
+section.cart .pizza_size {
+  color: grey;
+}
+
+section.login {
+  background: #F8F8F8;
+}
+section.login a {
+  color: #e24c11;
+}
+section.login a:hover {
+  color: #9e441a;
+  transition: all 0.3s ease-in-out;
+}
+
+a.link {
+  color: #e24c11;
+}
+
+section.status {
+  background: #F8F8F8;
+  min-height: calc(100vh - 86px);
+}
+
+.status-box {
+  padding: 60px 0 0;
+}
+
+.status-box ul {
+  padding-left: 60px 0 0;
+}
+
+.status-box ul li span {
+  position: relative;
+  padding-left: 20px;
+}
+
+.status-box ul li span:after {
+  content: "";
+  position: absolute;
+  left: -10px;
+  top: 50%;
+  background: #232323;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  transform: translate(-50%);
+  box-shadow: 0 0 1px 10px #F8F8F8;
+}
+
+.status-box ul li span:before {
+  font-family: "Line Awesome Free";
+  font-size: 46px;
+  font-weight: 600;
+  position: absolute;
+  left: -90px;
+  top: 50%;
+  transform: translateY(-40%);
+  color: inherit;
+}
+
+.status-box ul li:nth-child(1) span:before {
+  content: "\f46c";
+}
+
+.status-box ul li:nth-child(2) span:before {
+  content: "\f560";
+}
+
+.status-box ul li:nth-child(3) span:before {
+  content: "\f818";
+}
+
+.status-box ul li:nth-child(4) span:before {
+  content: "\f0d1";
+}
+
+.status-box ul li:nth-child(5) span:before {
+  content: "\f582";
+}
+
+.status-box ul li {
+  position: relative;
+}
+
+.status-box ul li:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -11px;
+  width: 2px;
+  height: 100%;
+  background: #232323;
+  margin-top: 10px;
+}
+
+.status-box ul li:nth-child(5) span:after {
+  box-shadow: 0 20px 1px 20px #F8F8F8;
+}
+
+.status-box ul li.step-completed:before {
+  background: #cccccc;
+}
+
+.status-box ul li.step-completed span:after {
+  background: #cccccc;
+}
+
+.status-box ul li.step-completed span {
+  color: #cccccc;
+}
+
+.status-box ul li.current span {
+  color: #e24c11;
+}
+
+.status-box ul li.current span:after {
+  background: #e24c11;
+}
+
+.status-box ul li small {
+  float: right;
+  font-size: 14px;
+  margin-top: 8px;
+}
+
+@media (max-width: 1060px) {
+  .container {
+    max-width: 90%;
+  }
+  .table {
+    display: block;
+    overflow-x: auto;
+    white-space: nowrap;
+  }
+}
+@media (max-width: 768px) {
+  .status-box ul li span:before {
+    font-size: 34px;
+  }
+}
